[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffi = "0.0.2"
gl = "0.14.0"
gl_loader = "0.1.2"
nalgebra-glm = "0.18.0"
rand = "0.8.5"
winapi = { version = "0.3.9", features = [ "wingdi", "winuser", "dwmapi" ] }
